# Covid-Simulator

./: CMakeLists.txt  Event.cpp  Event.h  Menu.h  Particle.cpp  Particle.h  README.md
proyecto-final-collider-grupo-4-main/: CollisionSystem.cpp  CollisionSystem.h  main.cpp
proyecto-final-collider-grupo-4-main/input/: case1.txt  case2.txt
